

Name: Segue ChangeLog


v. 1.8.6 (2007-10-02)
----------------------------------------------------
		
	* Bug Fix: 
		Updated all instances of $luser, $auser, $ltype, $atype, etcetera to look in
		the $_SESSION so they will work properly without the semi-register-globals
		hack that caused the recent security vulnerability.
		(Adam Franco)
	
v. 1.8.5 (2007-10-01)
----------------------------------------------------
		
	* Bug Fix: 
		Fixing Security hole where request variables were imported after config was
		set enabling overriding of any config variable.
		(Adam Franco)
	
v. 1.8.4 (2007-08-02)
----------------------------------------------------
		
	* Bug Fix: 
		
		Reorder UI now works properly in Tabs theme.
		(Alex Chapin)
		
	* Change: 
		Added error message to Roster UI that indicates a user has not logged into
		Segue when atttempted to add an associated site for that user.
		(Alex Chapin)
		
	* Bug Fix: 
		Fixed Roster UI so that site owners can add students to grouped sites (i.e.
		sites that are composed of 2 or more separate class slots
		(Alex Chapin)
		
	* Bug Fix: 
		Fixed div tags enclosing content blocks to ensure that the content block
		title also does not overlap with other content blocks content blocks.
		(Alex Chapin)
		
	* Bug Fix: 
		Link to edit groups UI now appears whenever there are groups that can be
		edited 
		(Alex Chapin)
		
	* Bug Fix: 
		Edit groups UI now shows all slot names that are part of a given group only
		once. 
		(Alex Chapin)
		
	* Bug Fix: 
		Fixed copy site UI so it now appears whenever a user has a slot they can
		copy to and also now shows correct slots to copy from and to.
		(Alex Chapin)
	
v. 1.8.3 (2007-07-17)
----------------------------------------------------
		
	* Change: 
		
		Added 1pixelout Audio Player Wordpress plugin to Segue credits page.
		(Alex Chapin)
		
	* Change: 
		
		Changed the width of the table enclosing content block RSS feeds to 100%
		(Alex Chapin)
		
	* Bug Fix: 