@@ -26,6 +26,12 @@
 <h3>2007-10-02</h3>
 <ul>
 		<li> Bug Fix:  
+			Fixed change-user function.
+		 (<em>Adam Franco</em>)</li>
+		<li> Bug Fix:  
+			Fixed site shortcuts.	
+		 (<em>Adam Franco</em>)</li>
+		<li> Bug Fix:  
 			Updated all instances of $luser, $auser, $ltype, $atype, etcetera to
 			look in the $_SESSION so they will work properly without the semi-register-globals
 			hack that caused the recent security vulnerability.
