@@ -7,6 +7,16 @@ v. 1.8.6 (2007-10-02)
 ----------------------------------------------------
 		
 	* Bug Fix: 
+		
+		Fixed change-user function.
+		(Adam Franco)
+		
+	* Bug Fix: 
+		
+		Fixed site shortcuts.
+		(Adam Franco)
+		
+	* Bug Fix: 
 		Updated all instances of $luser, $auser, $ltype, $atype, etcetera to look in
 		the $_SESSION so they will work properly without the semi-register-globals
 		hack that caused the recent security vulnerability.
